; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/cifra/extr_chacha20.c_chacha20_init.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/cifra/extr_chacha20.c_chacha20_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chacha20_context_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @chacha20_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chacha20_init(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.chacha20_context_t*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.chacha20_context_t*
  store %struct.chacha20_context_t* %7, %struct.chacha20_context_t** %5, align 8
  %8 = load %struct.chacha20_context_t*, %struct.chacha20_context_t** %5, align 8
  %9 = getelementptr inbounds %struct.chacha20_context_t, %struct.chacha20_context_t* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.chacha20_context_t*, %struct.chacha20_context_t** %5, align 8
  %12 = getelementptr inbounds %struct.chacha20_context_t, %struct.chacha20_context_t* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.chacha20_context_t*, %struct.chacha20_context_t** %5, align 8
  %15 = getelementptr inbounds %struct.chacha20_context_t, %struct.chacha20_context_t* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @memcpy(i32 %17, i8* %18, i32 4)
  ret void
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
